--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,9 +9,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: 20
+
       - name: Install Packages
         run : npm ci
       
       - name: Run ES Lint
         run : npm run lint
-        
