--- a/package.json
+++ b/package.json
@@ -178,7 +178,7 @@
     "eslint-plugin-import": "^2.29.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
   "keywords": [],
