Added start step to workflow

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,4 +17,7 @@ jobs:
       - name: Install Packages
         run : npm ci
       
+      - name: Start App
+        run: npm start
+      
       
