--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,9 @@ jobs:
       - name: Install Packages
         run : npm ci
       
+      - name: Start App
+        run: node api/index.js
+      
       
       
       
