--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
         run : npm ci
       
       - name: Start App
-        run: (node api/index.js)
+        run: (node api/index.js)&
       
       
       
